--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -58,9 +58,9 @@ spec:
             - containerPort: 9300
               name: es-9300
           env:
-            - name: cluster.name
+            - name: "cluster.name"
               value: "docker-cluster"
-            - name: bootstrap.memory_lock
+            - name: "bootstrap.memory_lock"
               value: "true"
             - name: ES_JAVA_OPTS
               value: "-Xms512m -Xmx512m"
@@ -91,11 +91,11 @@ spec:
             - containerPort: 9300
               name: es-9300
           env:
-            - name: cluster.name
+            - name: "cluster.name"
               value: "docker-cluster"
-            - name: bootstrap.memory_lock
+            - name: "bootstrap.memory_lock"
               value: "true"
             - name: ES_JAVA_OPTS
               value: "-Xms512m -Xmx512m"
-            - name: discovery.zen.ping.unicast.hosts
+            - name: "discovery.zen.ping.unicast.hosts"
               value: "es-master1"
