--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -62,8 +62,14 @@ spec:
               value: "docker-cluster"
             - name: "bootstrap.memory_lock"
               value: "true"
-            - name: ES_JAVA_OPTS
+            - name: "ES_JAVA_OPTS"
               value: "-Xms512m -Xmx512m"
+            - name: "node.master"
+              value: "true"
+            - name: "node.data"
+              value: "false"
+            - name: "node.ingest"
+              value: "false"
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -95,7 +101,11 @@ spec:
               value: "docker-cluster"
             - name: "bootstrap.memory_lock"
               value: "true"
-            - name: ES_JAVA_OPTS
+            - name: "ES_JAVA_OPTS"
               value: "-Xms512m -Xmx512m"
             - name: "discovery.zen.ping.unicast.hosts"
               value: "es-master1"
+            - name: "node.master"
+              value: "false"
+            - name: "node.data"
+              value: "true"
