--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -50,11 +50,6 @@ spec:
     spec:
       containers:
         - name: es-master1
-          command:
-            - sudo
-            - sysctl
-            - -w
-            - vm.max_map_count=262144
           image: elasticsearch:6.6.2
           imagePullPolicy: IfNotPresent
           ports:
@@ -94,11 +89,6 @@ spec:
     spec:
       containers:
         - name: es-data1
-          command:
-            - sudo
-            - sysctl
-            - -w
-            - vm.max_map_count=262144
           image: elasticsearch:6.6.2
           imagePullPolicy: IfNotPresent
           ports:
@@ -119,3 +109,7 @@ spec:
               value: "false"
             - name: "node.data"
               value: "true"
+
+
+
+#在宿主机执行：sudo sysctl -w vm.max_map_count=262144
