--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -61,7 +61,7 @@ spec:
             - name: "cluster.name"
               value: "docker-cluster"
             - name: ES_JAVA_OPTS
-              value: "-Xms1g -Xmx1g"
+              value: "-Xms512m -Xmx512m"
             - name: "node.master"
               value: "true"
             - name: "node.data"
@@ -98,7 +98,7 @@ spec:
             - name: "cluster.name"
               value: "docker-cluster"
             - name: ES_JAVA_OPTS
-              value: "-Xms1g -Xmx1g"
+              value: "-Xms512m -Xmx512m"
             - name: "discovery.zen.ping.unicast.hosts"
               value: "es-master1"
             - name: "node.master"
