--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -32,6 +32,23 @@ spec:
     app: es-data1
   type: NodePort
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: es-data2
+  namespace: cluster
+spec:
+  ports:
+    - name: es-9200
+      port: 9200
+      targetPort: 9200
+    - name: es-9300
+      port: 9300
+      targetPort: 9300
+  selector:
+    app: es-data2
+  type: NodePort
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -68,6 +85,8 @@ spec:
               value: "true"
             - name: "node.ingest"
               value: "false"
+            - name: "discovery.zen.minimum_master_nodes"
+              value: "2"
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -105,7 +124,43 @@ spec:
               value: "false"
             - name: "node.data"
               value: "true"
-
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: es-data2
+  namespace: cluster
+spec:
+  selector:
+    matchLabels:
+      app: es-data2
+  replicas: 1 # by default is 1
+  serviceName: es-data2
+  template:
+    metadata:
+      labels:
+        app: es-data2
+    spec:
+      containers:
+        - name: es-data2
+          image: elasticsearch:6.6.2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 9200
+              name: es-9200
+            - containerPort: 9300
+              name: es-9300
+          env:
+            - name: "cluster.name"
+              value: "docker-cluster"
+            - name: ES_JAVA_OPTS
+              value: "-Xms512m -Xmx512m"
+            - name: "discovery.zen.ping.unicast.hosts"
+              value: "es-master1"
+            - name: "node.master"
+              value: "false"
+            - name: "node.data"
+              value: "true"
 
 
 #在宿主机执行：sudo sysctl -w vm.max_map_count=262144
