--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -87,6 +87,8 @@ spec:
               value: "false"
             - name: "discovery.zen.minimum_master_nodes"
               value: "2"
+            - name: "discovery.zen.ping.unicast.hosts"
+              value: "es-data1,es-data2"
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -118,8 +120,6 @@ spec:
               value: "docker-cluster"
             - name: ES_JAVA_OPTS
               value: "-Xms512m -Xmx512m"
-            - name: "discovery.zen.ping.unicast.hosts"
-              value: "es-master1"
             - name: "node.master"
               value: "false"
             - name: "node.data"
@@ -155,8 +155,6 @@ spec:
               value: "docker-cluster"
             - name: ES_JAVA_OPTS
               value: "-Xms512m -Xmx512m"
-            - name: "discovery.zen.ping.unicast.hosts"
-              value: "es-master1"
             - name: "node.master"
               value: "false"
             - name: "node.data"
