--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: es-master1
+  name: es-node1
   namespace: cluster
 spec:
   ports:
@@ -13,12 +13,12 @@ spec:
       targetPort: 9300
   selector:
     app: es-master1
-  type: NodePort
+  type: node1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: es-data1
+  name: es-node2
   namespace: cluster
 spec:
   ports:
@@ -29,13 +29,13 @@ spec:
       port: 9300
       targetPort: 9300
   selector:
-    app: es-data1
+    app: es-node2
   type: NodePort
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: es-data2
+  name: es-node3
   namespace: cluster
 spec:
   ports:
@@ -46,27 +46,27 @@ spec:
       port: 9300
       targetPort: 9300
   selector:
-    app: es-data2
+    app: es-node3
   type: NodePort
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: es-master1
+  name: es-node1
   namespace: cluster
 spec:
   selector:
     matchLabels:
-      app: es-master1
+      app: es-node1
   replicas: 1 # by default is 1
-  serviceName: es-master1
+  serviceName: es-node1
   template:
     metadata:
       labels:
-        app: es-master1
+        app: es-node1
     spec:
       containers:
-        - name: es-master1
+        - name: es-node1
           image: elasticsearch:6.6.2
           imagePullPolicy: IfNotPresent
           ports:
@@ -86,26 +86,26 @@ spec:
             - name: "discovery.zen.minimum_master_nodes"
               value: "2"
             - name: "discovery.zen.ping.unicast.hosts"
-              value: "[es-master1:9300,es-data1:9300,es-data2:9300]"
+              value: "[es-node1:9300,es-node2:9300,es-node3:9300]"
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: es-data1
+  name: es-node2
   namespace: cluster
 spec:
   selector:
     matchLabels:
-      app: es-data1
+      app: es-node2
   replicas: 1 # by default is 1
-  serviceName: es-data1
+  serviceName: es-node2
   template:
     metadata:
       labels:
-        app: es-data1
+        app: es-node2
     spec:
       containers:
-        - name: es-data1
+        - name: es-node2
           image: elasticsearch:6.6.2
           imagePullPolicy: IfNotPresent
           ports:
@@ -125,26 +125,26 @@ spec:
             - name: "discovery.zen.minimum_master_nodes"
               value: "2"
             - name: "discovery.zen.ping.unicast.hosts"
-              value: "[es-master1:9300,es-data1:9300,es-data2:9300]"
+              value: "[es-node1:9300,es-node2:9300,es-node3:9300]"
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: es-data2
+  name: es-node3
   namespace: cluster
 spec:
   selector:
     matchLabels:
-      app: es-data2
+      app: es-node3
   replicas: 1 # by default is 1
-  serviceName: es-data2
+  serviceName: es-node3
   template:
     metadata:
       labels:
-        app: es-data2
+        app: es-node3
     spec:
       containers:
-        - name: es-data2
+        - name: es-node3
           image: elasticsearch:6.6.2
           imagePullPolicy: IfNotPresent
           ports:
@@ -164,7 +164,7 @@ spec:
             - name: "discovery.zen.minimum_master_nodes"
               value: "2"
             - name: "discovery.zen.ping.unicast.hosts"
-              value: "[es-master1:9300,es-data1:9300,es-data2:9300]"
+              value: "[es-node1:9300,es-node2:9300,es-node3:9300]"
 
 
 #在宿主机执行：sudo sysctl -w vm.max_map_count=262144
