--- a/k8s/elasticsearch-cluster/k8s.yaml
+++ b/k8s/elasticsearch-cluster/k8s.yaml
@@ -12,8 +12,8 @@ spec:
       port: 9300
       targetPort: 9300
   selector:
-    app: es-master1
-  type: node1
+    app: es-node1
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
