--- a/middleware/elasticsearch-cluster/docker-swarm.yml
+++ b/middleware/elasticsearch-cluster/docker-swarm.yml
@@ -1,4 +1,5 @@
-version: '3'
+version: '3.1'
+
 services:
   es-node1:
     image: elasticsearch:6.6.2
@@ -17,7 +18,7 @@ services:
     volumes:
       - esdata1:/usr/share/elasticsearch/data
     ports:
-      - 9200:9200
+      - 9200
     networks:
       - esnet
   es-node2:
@@ -37,7 +38,7 @@ services:
     volumes:
       - esdata2:/usr/share/elasticsearch/data
     ports:
-      - 9200:9200
+      - 9200
     networks:
       - esnet
   es-node3:
@@ -57,13 +58,15 @@ services:
     volumes:
       - esdata3:/usr/share/elasticsearch/data
     ports:
-      - 9200:9200
+      - 9200
     networks:
       - esnet
 volumes:
   esdata1:
     driver: local
   esdata2:
+    driver: local
+  esdata3:
     driver: local
 
 networks:
