--- a/middleware/mysql-cluster/k8s.yaml
+++ b/middleware/mysql-cluster/k8s.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ndb_mgmd
+  name: ndb-mgmd
   namespace: cluster
 spec:
   ports:
@@ -9,7 +9,7 @@ spec:
       port: 3306
       targetPort: 3306
   selector:
-    app: ndb_mgmd
+    app: ndb-mgmd
   type: NodePort
 ---
 apiVersion: v1
@@ -71,25 +71,25 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: ndb_mgmd
+  name: ndb-mgmd
   namespace: cluster
 spec:
   selector:
     matchLabels:
-      app: ndb_mgmd
+      app: ndb-mgmd
   replicas: 1 # by default is 1
-  serviceName: ndb_mgmd
+  serviceName: ndb-mgmd
   template:
     metadata:
       labels:
-        app: ndb_mgmd
+        app: ndb-mgmd
     spec:
       containers:
-        - name: ndb_mgmd
+        - name: ndb-mgmd
           image: mysql/mysql-cluster:latest
           command:
             - /entrypoint.sh
-            - ndb_mgmd
+            - ndb-mgmd
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3306
